<resources>
    <string name="RandomDiceRoller">Random Dice Roller</string>
    <string name="PressButton">Press Button To Roll</string>
    <string name="Roll">Roll</string>
    <string name="Settings">Settings</string>
    <string name="Stats">Stats</string>
    <string name="SaveGame">Save Game On Close</string>
    <string name="app_name">Snake Eyes</string>
    <string name="credits">App made by: Talon Ernst, Landon Hebert, Taylor McVittie</string>
    <string name="GamePlay">Game Play</string>
    <string name="ChooseTheme">Choose Theme</string>
    <string name="DarkTheme">Dark Theme</string>
    <string name="NumberOfSidesOnDice">Number of Sides on Dice</string>
    <string name="PleaseSelect"> Please select amount of sides on dice.</string>
    <string name="computer">Computer</string>
    <string name="player">Player</string>
    <string name="dash">-</string>
    <string name="PlayerWins">Player Wins!</string>
    <string name="tie">It\'s A Tie!</string>
    <string name="AiWins">AI Wins!</string>

    <!--Activity Titles-->
    <string name="title_activity_settings">Settings Page</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_game">Snake Eyes Game</string>
    <string name="title_activity_stats">Statistics</string>

    <!--Stats Strings-->
    <string name="AveragePlayerRoll">Average Player Roll</string>
    <string name="AverageComputerRoll">Average Computer Roll</string>
    <string name="AverageMaxRoll">Average Maximum Roll</string>
    <string name="TotalRecord">Win-Loss-Draw Record</string>
    <string name="LastRoll">Last Roll(Roll/Max)</string>
    <string name="ResetGameStats">Reset Game Statistics</string>
    <string name="ResetDiceStats">Reset Dice Roll Statistics</string>
    <string name="Reset">Reset</string>
    <string name="GameStats">Game Stats</string>
    <string name="RollStats">Dice Roll Stats</string>

    <!--About Page-->
    <string name="CreatorString">Creators:</string>
    <string name="talon">Talon Ernst: ternst6858@conestogac.on.ca</string>
    <string name="taylor">Taylor McVittie: tmcvittie1153@conestogac.on.ca</string>
    <string name="landon">Landon Hebert: lhebert7289@conestogac.on.ca</string>

    <!-- Notification Strings -->
    <string name="roll_notif_title">Previous Roll</string>
    <string name="roll_notif_body">Your last dice roll was a</string>


    <string name="ftb">Floating Button</string>
</resources>